--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-aiogram~=3.19.0
-SQLAlchemy~=2.0.40
-# dotenv~=0.9.9
+aiogram~=3.20.0
+dotenv~=0.9.9
 python-dotenv~=1.1.0
+sqlalchemy~=2.0.40
+asyncpg~=0.30.0
+
